# 3dVec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md
2dCore/: RLayer.cpp  RLayer.h  RS.h
2dCore/math/: RArc.cpp  RArc.h  RBox.cpp  RBox.h  RCircle.cpp  RCircle.h  REllipse.cpp  REllipse.h  REllipseProxy.h  RExplodable.h  RLine.cpp  RLine.h  RMath.cpp  RMath.h  RMatrix.cpp  RMatrix.h  RPoint.cpp  RPoint.h  RPolyline.cpp  RPolyline.h  RPolylineProxy.h  RRay.cpp  RRay.h  RRefPoint.h  RShape.cpp  RShape.h  RSpline.cpp  RSpline.h  RSplineProxy.h  RTextLabel.cpp  RTextLabel.h  RTriangle.cpp  RTriangle.h  RVector.cpp  RVector.h  RXLine.cpp  RXLine.h
CC2d/: CMakeLists.txt  RColor.cpp  RColor.h  RColorCodes.h  REntity.h  REntityData.cpp  RLinetypeList.h  RLinetypeListImperial.h  RLinetypeListMetric.h  RLinetypePattern.cpp  RLinetypePattern.h  RLineweight.cpp  RLineweight.h  RObject.h  RPattern.cpp  RPattern.h  RPatternLine.cpp  RPatternLine.h  RPatternList.cpp  RPatternList.h  RPatternListImperial.cpp  RPatternListImperial.h  RPatternListMetric.h  RPropertyAttributes.h  RPropertyTypeId.cpp  RPropertyTypeId.h  RResourceList.h  RS.h  RStorage.h
CC2d/Core/: CMakeLists.txt  RBlock.cpp  RBlock.h  RBlockReferenceData.cpp  RBlockReferenceData.h  RBlockReferenceEntity.cpp  RBlockReferenceEntity.h  RColor.cpp  RColor.h  RColorCodes.h  RDimStyle.cpp  RDimStyle.h  RDimStyleData.cpp  RDimStyleData.h  RDocument.cpp  RDocument.h  RDocumentVariables.cpp  RDocumentVariables.h  REntity.cpp  REntity.h  REntityData.cpp  REntityData.h  RLayer.cpp  RLayer.h  RLayerState.cpp  RLayerState.h  RLinetype.cpp  RLinetype.h  RLinetypeList.cpp  RLinetypeList.h  RLinetypeListImperial.cpp  RLinetypeListImperial.h  RLinetypeListMetric.cpp  RLinetypeListMetric.h  RLinetypePattern.cpp  RLinetypePattern.h  RLineweight.cpp  RLineweight.h  RLinkedStorage.cpp  RLinkedStorage.h  (+51 more)
CC2d/Core/math/: RArc.h  RBox.cpp  RBox.h  RCircle.h  RDirected.cpp  RDirected.h  REllipse.h  REllipseProxy.h  RExplodable.h  RLine.cpp  RLine.h  RMath.cpp  RMath.h  RMatrix.cpp  RMatrix.h  RPoint.cpp  RPoint.h  RPolyline.h  RPolylineProxy.h  RRay.cpp  RRay.h  RRefPoint.cpp  RRefPoint.h  RShape.cpp  RShape.h  RShapeProxy.h  RTextLabel.cpp  RTextLabel.h  RTransform.cpp  RTransform.h  RTransformOp.h  RTriangle.h  RVector.cpp  RVector.h  RXLine.cpp  RXLine.h
CC2d/Entity/: CMakeLists.txt  RArcData.cpp  RArcData.h  RArcEntity.cpp  RArcEntity.h  RAttributeData.h  RAttributeDefinitionData.h  RAttributeDefinitionEntity.h  RAttributeEntity.h  RCircleData.cpp  RCircleData.h  RCircleEntity.cpp  RCircleEntity.h  RDimAlignedData.cpp  RDimAlignedData.h  RDimAlignedEntity.cpp  RDimAlignedEntity.h  RDimAngular2LData.cpp  RDimAngular2LData.h  RDimAngular2LEntity.cpp  RDimAngular2LEntity.h  RDimAngular3PData.cpp  RDimAngular3PData.h  RDimAngular3PEntity.cpp  RDimAngular3PEntity.h  RDimAngularData.cpp  RDimAngularData.h  RDimAngularEntity.cpp  RDimAngularEntity.h  RDimArcLengthData.cpp  RDimArcLengthData.h  RDimArcLengthEntity.cpp  RDimArcLengthEntity.h  RDimDiametricData.cpp  RDimDiametricData.h  RDimDiametricEntity.cpp  RDimDiametricEntity.h  RDimLinearData.cpp  RDimLinearData.h  RDimLinearEntity.cpp  (+80 more)
CC2d/Math/: RArc.cpp  RArc.h  RBox.cpp  RBox.h  RCircle.cpp  RCircle.h  REllipse.cpp  REllipse.h  REllipseProxy.h  RExplodable.h  RLine.h  RMath.cpp  RMath.h  RMatrix.cpp  RMatrix.h  RPoint.h  RPolyline.cpp  RPolyline.h  RPolylineProxy.h  RRay.cpp  RRay.h  RRefPoint.h  RShape.cpp  RShape.h  RSpline.cpp  RSpline.h  RSplineProxy.h  RTextLabel.h  RTriangle.cpp  RTriangle.h  RVector.h  RXLine.cpp  RXLine.h
CC2d/Snap/: RRestrictAngleLength.cpp  RRestrictAngleLength.h  RRestrictHorizontal.cpp  RRestrictHorizontal.h  RRestrictOff.cpp  RRestrictOff.h  RRestrictOrthogonal.cpp  RRestrictOrthogonal.h  RRestrictVertical.cpp  RRestrictVertical.h  RSnapAuto.cpp  RSnapAuto.h  RSnapCenter.cpp  RSnapCenter.h  RSnapDistance.cpp  RSnapDistance.h  RSnapEnd.cpp  RSnapEnd.h  RSnapEntityBase.cpp  RSnapEntityBase.h  RSnapFree.cpp  RSnapFree.h  RSnapGrid.cpp  RSnapGrid.h  RSnapIntersection.cpp  RSnapIntersection.h  RSnapMiddle.cpp  RSnapMiddle.h  RSnapOnEntity.cpp  RSnapOnEntity.h  RSnapPerpendicular.cpp  RSnapPerpendicular.h  RSnapReference.cpp  RSnapReference.h  RSnapTangential.cpp  RSnapTangential.h
CC2d/SpatialIndex/: RSpatialIndexNavel.cpp  RSpatialIndexNavel.h
CCCoreLib/: CMakeLists.txt
CCCoreLib/include/: CMakeLists.txt
CCCoreLib/src/: CMakeLists.txt
CCFbo/: CMakeLists.txt
CCFbo/include/: ccShader.h
CCFbo/src/: ccBilateralFilter.cpp
CCdb/: CMakeLists.txt
CCdb/include/: CMakeLists.txt  ccCADContext.h  ccGLDrawContext.h
CCdb/src/: CMakeLists.txt  ccColorScalesManager.cpp  ccOctreeSpinBox.cpp
GLWindow/: R2DViewer.h  R3DViewer.h
core/: CMakeLists.txt
docs/: QDesktopFramework.xmind
gl2d/: ccCADShape.h
gl2d/core/: REntity.cpp  REntityData.h  RS.cpp  RS.h
gl2d/entity/: RArcEntity.cpp  RArcEntity.h
gl2d/math/: RShape.cpp  RShape.h  RVector.cpp  RVector.h
glWindow/: CMakeLists.txt
glWindow/include/: CMakeLists.txt  ccGLUtils.h  ccGLWindow.h  ccGLWindowInterface.h  ccGLWindowSignalEmitter.h  ccGLWindowStereo.h  ccGuiParameters.h  ccRenderingTools.h  qCC_glWindow.h
glWindow/include/oculus/: ccOculus.h
glWindow/src/: CMakeLists.txt  ccGLUtils.cpp  ccGLWindow.cpp  ccGLWindowInterface.cpp  ccGLWindowSignalEmitter.cpp  ccGLWindowStereo.cpp  ccGuiParameters.cpp  ccRenderingTools.cpp
math/: CMakeLists.txt  shape.h
qdf/: CMakeLists.txt  qdf_global.h
src/: CMakeLists.txt  application.cpp  application.h  main.cpp
viewer/widgets/: RLinetypeCombo.cpp  RLinetypeCombo.h  RLinetypeComboDelegate.cpp  RLinetypeComboDelegate.h  RLineweightCombo.cpp  RLineweightCombo.h
